Remove jascut dependency and upgrade to Java 11