@@ -6,11 +6,6 @@
 	<packaging>maven-plugin</packaging>
 	<name>Maven MDA Plugin</name>
 	<version>2.1.3-SNAPSHOT</version>
-	<parent>
-		<groupId>com.soffid</groupId>
-		<artifactId>template</artifactId>
-		<version>1.0.0</version>
-	</parent>
 	<prerequisites>
 		<maven>2.0.9</maven>
 	</prerequisites>
@@ -80,20 +75,20 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.3.1</version>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+					<compilerArgs>
+					    <arg>--add-modules=java.sql</arg>
+					</compilerArgs>
+				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
-			</plugin>
-
 			<!-- Testing the result of the it pom.xml -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.3.1</version>
 				<configuration>
 					<excludes>
 						<exclude>**/*IntegrationTest.java</exclude>
@@ -101,6 +96,31 @@
 				</configuration>
 			</plugin>
 
+			 <plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-plugin-plugin</artifactId>
+			    <version>2.9</version>
+			    <executions>
+                   <execution>
+                       <id>mojo-descriptor</id>
+                       <goals>
+                           <goal>descriptor</goal>
+                       </goals>
+                   </execution>
+			      <execution>
+			        <id>default-descriptor</id>
+			        <phase>process-classes</phase>
+			      </execution>
+			      <!-- if you want to generate help goal -->
+			      <execution>
+			        <id>help-goal</id>
+			        <goals>
+			          <goal>helpmojo</goal>
+			        </goals>
+			      </execution>
+			    </executions>
+			  </plugin>
+  
 		</plugins>
 	</build>
 
@@ -108,4 +128,37 @@
 		<gforge.project>bpm</gforge.project>
 	</properties>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>soffid-open</id>
+			<url>https://download.soffid.com/maven</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>central</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</pluginRepository>
+	</pluginRepositories>
+	<repositories>
+		<repository>
+			<id>central</id>
+			<url>https://repo1.maven.org/maven2</url>
+		</repository>
+		<repository>
+			<id>soffid-open</id>
+			<url>https://download.soffid.com/maven</url>
+		</repository>
+	</repositories>
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>true</uniqueVersion>
+      <id>soffid-open</id>
+      <name>Soffid Maven repository</name>
+      <url>${soffid.deploy.url}</url>
+    </repository>
+    <site>
+      <id>soffid-open-site</id>
+      <name>Soffid Maven site repository</name>
+      <url>${soffid.deploy.site.url}</url>
+    </site>
+  </distributionManagement>
 </project>
